...
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <in.koreatech.koin.core.appbar.AppBarBase
        android:id="@+id/koin_base_app_bar_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonText="취소"
        app:rightButtonText="등록"
        app:titleText="분실물게시판" />

...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/lostfound_create_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_lostsort_border">

                    <RadioButton
                        android:id="@+id/lostfound_create_get_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/colorPrimary"
                        android:checked="true"
                        android:text="분실물 습득"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <RadioButton
                        android:id="@+id/lostfound_create_found_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:buttonTint="@color/colorPrimary"
                        android:checked="false"
                        android:text="분실물 찾기"
...
                    android:layout_marginTop="17.5dp"
                    android:layout_marginBottom="18.5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lostdate_lostplace_border"
                    app:layout_constraintStart_toEndOf="@+id/lostfound_create_date_textview"
                    app:layout_constraintTop_toBottomOf="@+id/lostsort_lostdate_border"
                    app:layout_constraintVertical_bias="0.5" />


                <TextView
                    android:id="@+id/lostfound_create_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginBottom="18.5dp"
                    android:gravity="center_vertical"
                    android:text="분실일"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lostdate_lostplace_border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lostsort_lostdate_border"
                    app:layout_constraintVertical_bias="0.5" />
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lostfound_create_lostdate_textview" />


                <TextView
                    android:id="@+id/lostfound_create_placename_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18.5dp"
                    android:gravity="center_vertical"
                    android:text="분실장소"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lostdate_lostplace_border" />


...
                    android:layout_marginStart="49dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/lostfound_create_phonenum_textview"
                    app:layout_constraintTop_toBottomOf="@+id/lostplace_phone_number_border">

                    <RadioButton
                        android:id="@+id/lostfound_create_phone_public_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="공개"
...
                    android:layout_marginEnd="0.5dp"
                    android:background="@color/divider"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lostfound_create_phone_num_ediitext" />

                <EditText
                    android:id="@+id/lostfound_create_content_ediitext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18.5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
