...
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/lostfound_detail_phone_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline_0.3"
                    app:layout_constraintTop_toTopOf="@+id/lostfound_detail_phone_textview"
                    tools:text="010-1234-1234" />

                <TextView
                    android:id="@+id/lostfound_lost_place_contents_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
...
