...

            <LinearLayout
                android:id="@+id/navi_item_lostfound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="@string/navigation_item_lostfound">

                <TextView
                    android:id="@+id/navi_item_lostfound_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="17dp"
...
